--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,10 +20,11 @@ jobs:
                   aws-region: us-east-2
             - name: Checkout Source
               uses: actions/checkout@v3
-            - name: CDK Diff
+            - name: CDK Deploy
               uses: youyo/aws-cdk-github-actions@v2
               with:
                   cdk_subcommand: "deploy"
+                  cdk_args: '--require-approval never'
                   actions_comment: true
                   working_dir: iac
               env:
