--- a/get-users/Dockerfile
+++ b/get-users/Dockerfile
@@ -4,7 +4,7 @@ FROM public.ecr.aws/lambda/nodejs:12
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
-COPY package*.json .
+COPY package*.json ${LAMBDA_TASK_ROOT}
 RUN npm install
 
 # Copy function code
