--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,8 @@ jobs:
               uses: actions/checkout@v3
             - name: Setup Node
               uses: actions/setup-node@v3
+              with:
+                node-version: 16
             - name: Install AWS CDK
               run: |
                 npm install -g aws-cdk
