--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,6 @@ jobs:
               run: |
                 npm install
                 cdk diff
-                cdk deploy
+                cdk deploy --require-approval never
               shell: bash
               working-directory: iac
